--- a/src/main/resources/assets/boot/lang/en_us.json
+++ b/src/main/resources/assets/boot/lang/en_us.json
@@ -6,5 +6,29 @@
     "item.boot.boots3": "Diamond Reinforced Boots",
     "item.boot.boots3.tooltip": "§960% Speed",
     "item.boot.boots4": "Netherite Reinforced Boots",
-    "item.boot.boots4.tooltip": "§960% Speed"
+    "item.boot.boots4.tooltip": "§960% Speed",
+    "text.autoconfig.boot.title": "BootZ Config",
+    "text.autoconfig.boot.option.iron_speed_boost.@PrefixText": "Speed Buff Level",
+    "text.autoconfig.boot.option.iron_speed_boost": "Iron",
+    "text.autoconfig.boot.option.gold_speed_boost": "Gold",
+    "text.autoconfig.boot.option.diamond_speed_boost": "Diamond",
+    "text.autoconfig.boot.option.netherite_speed_boost": "Netherite",
+    "text.autoconfig.boot.option.iron_durability.@PrefixText": "Durability x 15",
+    "text.autoconfig.boot.option.iron_durability": "Iron",
+    "text.autoconfig.boot.option.gold_durability": "Gold",
+    "text.autoconfig.boot.option.diamond_durability": "Diamond",
+    "text.autoconfig.boot.option.netherite_durability": "Netherite",
+    "text.autoconfig.boot.option.iron_protection.@PrefixText": "Protection",
+    "text.autoconfig.boot.option.iron_protection": "Iron",
+    "text.autoconfig.boot.option.gold_protection": "Gold",
+    "text.autoconfig.boot.option.diamond_protection": "Diamond",
+    "text.autoconfig.boot.option.netherite_protection": "Netherite",
+    "text.autoconfig.boot.option.boots_particle_effect.@PrefixText": "Particle Effect",
+    "text.autoconfig.boot.option.boots_particle_effect": "Default Flame",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[0]": "§31§r:ANGRY_VILLAGER;§32§r:BUBBLE;§33§r:CAMPFIRE_COSY_SMOKE",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[1]": "§34§r:CLOUD;§35§r:CRIMSON_SPORE;§36§r:CRIT;§37§r:DOLPHIN;§38§r:DRAGON_BREATH",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[2]": "§39§r:DRIPPING_HONEY;§310§r:DRIPPING_LAVA;§311§r:DRIPPING_OBSIDIAN_TEAR",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[3]": "§312§r:ENCHANT;§313§r:END_ROD;§314§r:EXPLOSION;§315§r:FIREWORK;§36§r:FLASH",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[4]": "§317§r:HAPPY_VILLAGER;§318§r:HEART;§319§r:MYCELIUM;§320§r:NOTE;§321§r:PORTAL",
+    "text.autoconfig.boot.option.boots_particle_effect.@Tooltip[5]": "§322§r:SOUL;§323§r:SOUL_FIRE_FLAME;§324§r:SQUID_INK;§325§r:WITCH"
 }
