--- a/src/main/resources/assets/boot/lang/pl_pol.json
+++ b/src/main/resources/assets/boot/lang/pl_pol.json
@@ -1,12 +1,12 @@
 {
     "item.boot.boots1": "Żelazne wzmocnione buty",
-    "item.boot.boots1.tooltip": "§920% prędkości",
+    "item.boot.boots1.tooltip": "§9+20% Prędkości",
     "item.boot.boots2": "Złote wzmocnione buty",
-    "item.boot.boots2.tooltip": "§940% prędkości",
+    "item.boot.boots2.tooltip": "§9+40% Prędkości",
     "item.boot.boots3": "Diamentowe wzmocnione buty",
-    "item.boot.boots3.tooltip": "§960% prędkości",
+    "item.boot.boots3.tooltip": "§9+60% Prędkości",
     "item.boot.boots4": "Netherytowe wzmocnione buty",
-    "item.boot.boots4.tooltip": "§960% prędkości",
+    "item.boot.boots4.tooltip": "§9+60% Prędkości",
     "text.autoconfig.boot.title": "BootZ Config",
     "text.autoconfig.boot.option.iron_speed_boost.@PrefixText": "Poziom przyspieszenia",
     "text.autoconfig.boot.option.iron_speed_boost": "Żelazne",
